--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "es2015",
+    "moduleResolution": "node",
+    "module": "es6",
     "target": "es2018",
     "outDir": "build"
   },
