--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "target": "es2018",
     "outDir": "build"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/server.ts"]
 }
