--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "moduleResolution": "node",
     "module": "es6",
     "target": "esnext",
-    "outDir": "build"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["src/server.ts"]
+  "include": ["build/**/*.ts"],
+  "exclude": ["build/server.ts"]
 }
