--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "prettier": "^1.19.1",
     "rollup": "^1.27.4",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
