--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "build:dev": "rollup --watch -c rollup.config.js",
+    "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,9 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
     "prettier": "^1.19.1",
     "rollup": "^1.27.4",
     "rollup-plugin-node-resolve": "^5.2.0",
