--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,15 @@
 {
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"]
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "no-unused-vars": ["warn", {"argsIgnorePattern": "^_"}]
+  }
 }
