--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/client.js",
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "NODE_ENV=production rollup -c rollup.config.js",
     "build:dev": "rollup --watch -c rollup.config.js",
     "lint": "eslint src/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,16 +21,23 @@
   "homepage": "https://github.com/malectro/graveyard#readme",
   "dependencies": {
     "pixi.js": "^5.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rxjs": "^6.5.3",
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "acorn-jsx": "^5.1.0",
     "eslint": "^6.7.2",
     "prettier": "^1.19.1",
     "rollup": "^1.27.4",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-typescript": "^1.0.1",
     "typescript": "^3.7.2"
   }
