--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "NODE_ENV=production rollup -c rollup.config.js",
     "build:dev": "rollup --watch -c rollup.config.js",
     "lint": "eslint src/**/*.ts",
+    "check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
